Fix navbar overlapping page elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,14 @@ Violet:#554ce4 Blush:#FFECE6 Periwinkle:#bfd1fe Gramps:#8692b2 */
   font-family: 'Nunito';
 }
 
+.container,
+.container-fluid {
+  --bs-gutter-x: 0;
+  margin: auto;
+  min-width: 100%;
+}
+
+
 .navbar-toggler.toggler-example {
   cursor: pointer;
 }
